[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking", "json", "rustls-tls-webpki-roots"], default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
chrono = { version = "0.4.39", features = ["clock"] }
